# edgetx-cli

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  imgui.ini  main.go
.github/workflows/: ci.yml  test.yml
cmd/: backup.go  dev.go  dev_simulator.go  dev_simulator_list.go  eject.go  init.go  pkg.go  pkg_install.go  pkg_list.go  pkg_remove.go  pkg_test.go  pkg_update.go  push.go  root.go  scaffold.go  sync.go
docs/: Manifest.md  Scripting.md  State.md  showcase.lua
internal/radio/: backup.go  backup_test.go  backupname.go  copy.go  copy_test.go  detect_darwin.go  detect_linux.go  detect_test.go  eject_darwin.go  radioinfo.go  sdroot.go
internal/repository/: clone.go  clone_test.go  version_test.go
internal/scaffold/: scaffold.go
internal/sync/: sync.go
pkg/logging/: logger.go
pkg/manifest/: manifest.go  manifest_test.go
pkg/radio/: copy.go  copy_test.go  detect_windows.go  eject_darwin.go  eject_linux.go  eject_windows.go  radioinfo_test.go  version.go  version_test.go  wait.go
pkg/repository/: clone.go  clone_test.go  repository.go  repository_test.go  version.go
pkg/scaffold/: scaffold.go  scaffold_test.go
pkg/simulator/: audio.go  cgo.go  display.go  display_test.go  gl_texture.go  input.go  input_test.go  radios.go  radios_test.go  runtime.go  script.go  script_test.go  sdcard.go  sdcard_test.go  simulator.go  ui.go  wamr.go  wamr_callbacks.go
pkg/source/: source.go  source_test.go
pkg/sync/: sync.go  sync_test.go
src/: error.rs  main.rs
src/cli/: backup.rs  dev.rs  eject.rs  mod.rs  pkg.rs
src/device/: detect.rs  eject.rs  mod.rs
src/manifest/: content.rs  mod.rs
src/radio/: backup.rs  capabilities.rs  copy.rs  detect.rs  mod.rs  radioinfo.rs  version.rs
src/radio_catalog/: mod.rs
src/registry/: mod.rs  resolve.rs  version.rs
src/repository/: clone.rs  mod.rs  source.rs  version.rs
src/scaffold/: mod.rs
src/simulator/: audio.rs  display.rs  framebuffer.rs  (+8 more)
templates/: mix.lua.tmpl  tool.lua.tmpl  widget_main.lua.tmpl
tests/: simulator_script.rs
(+15 files in other folders)
