[package]
name = "edgetx-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing EdgeTX radios"
license = "GPL-3.0"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Terminal output
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"

# HTTP
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }

# Git operations
gix = { version = "0.80", default-features = false, features = ["blocking-network-client", "worktree-mutation", "revision"] }

# File watching
notify = "8"

# Semver
semver = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Glob patterns
globset = "0.4"

# Zip/compression
zip = { version = "8", default-features = false, features = ["deflate"] }

# Cache/config paths
directories = "6"

# Directory traversal
walkdir = "2"

# GUI (simulator)
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }

# Audio (simulator)
rodio = "0.22"

# WASM runtime (WAMR — supports legacy exception handling needed by EdgeTX WASM binaries)
wamr-rust-sdk = { git = "https://github.com/jurgelenas/wamr-rust-sdk.git", branch = "exception-handling-and-shared-memory", features = ["exception-handling", "shared-memory"] }

# Image encoding (screenshots)
image = { version = "0.25", default-features = false, features = ["png"] }

# CSV for file lists
csv = "1"

# Regex for name validation
regex = "1"

# Home dir resolution
dirs = "6"

# Temp directories (used in clone)
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rstest = "0.26"

[profile.release]
lto = true
strip = true
codegen-units = 1
